@@ -3169,14 +3169,13 @@
             An excellent overview about the <a href="https://www.lead-dbs.org/about-the-mni-spaces/">different MNI spaces</a> can be found on the DBS site from Andreas Horn.</p>
             
             <i>White Matter Hyperintensity Correction (WMHC)</i>
-            <p>Detecting <i>White Matter Hyperintensities</i> (WMHs) is crucial to avoid registration errors, such as attempting to move WMHs to typical GM locations, and surface reconstruction problems, such as misinterpreting WMHs as fuzzy cortical sulci <a href="https://dx.doi.org/10.13140/RG.2.2.26753.20326">Dahnke et al. 2019)</a>.</br>
-            CAT first applies an optimised low-resolution shooting registration technique (<a href="https://doi.org/10.1016/j.neuroimage.2010.12.049">Ashburner and Friston, 2011</a>) on the initial SPM segments to map the tissue probability map (TPM) and the CAT atlas to the individual space. Fine local correction of tissues and regions is then performed using region-growing and bottle-neck algorithms (<a href="https://doi.org/10.1109/MMBIA.1996.534084">Mangin et al., 1996.</a>; <a href="https://neuro-jena.github.io/pdf/Dahnke-NI12.pdf">Dahnke et al. 2012</a>). In the individual atlas map, isolated grey matter (GM) islands within the white matter (WM) and voxels surrounding the lateral ventricles with high WM probability but GM-like intensity are referred to as WM hyperintensities (WMHs).</br>
-            The final segmentation of the prepared T1 image with uncorrected WMHs uses an AMAP approach (<a href="https://doi.org/10.1109/42.563663">Rajapakse et al., 1997</a>) with a partial volume estimation (PVE) model (<a href="https://doi.org/10.1016/j.neuroimage.2004.05.007">Tohka et al., 2004</a>). Voxels with GM intensity but a WMH label are either temporarily aligned to the WM or treated as a separate tissue class, depending on the WMHC processing parameters.</p>
+            <p>The accurate detection of <i>White Matter Hyperintensities</i> (WMHs) is crucial to prevent registration errors, such as the inappropriate mapping of WMHs to typical gray matter locations. Additionally, WMHs in close proximity to the cortex can lead to surface reconstruction issues by being misinterpreted as gray matter.<br>
+            To address this issue, CAT12 initially employs a low-resolution shooting registration technique (<a href="https://doi.org/10.1016/j.neuroimage.2010.12.049">Ashburner and Friston, 2011</a>) on the preliminary SPM segments to align the tissue probability map and the CAT12 atlas with the individual image space. Subsequently, local tissue and region corrections are conducted using region-growing and bottleneck algorithms (<a href="https://doi.org/10.1109/MMBIA.1996.534084">Mangin et al., 1996</a>; <a href="https://neuro-jena.github.io/pdf/Dahnke-NI12.pdf">Dahnke et al. 2012</a>).<br>
+            Within the individual segmentation map, isolated GM islands within the white matter (WM) and voxels adjacent to the lateral ventricles that have high WM probability but GM-like intensity are classified as WMHs. These areas with GM-like intensity but a WMH label are either temporarily aligned with WM or treated as a separate tissue class, depending on the WMH correction (WMHC) processing parameters.</p>
             
-            <i>Stroke Lesion Correction (SLC)</i></p>
-            <p>To avoid improper volumetric deformations in stroke lesions, CAT allows to suppress strong (high-frequent) deformation in the Dartel/Shooting registration schemes. 
-            The lesions have to be set to zero (e.g., by using the  <a class="function" href="matlab:spm_jobman('interactive','','spm.tools.cat.maskimg');">Manual image (lesion) masking</a> batch) and the SLC flag has to be activate in the <a class="function" href="matlab:cat('expert');">expert mode</a> of CAT.
-            The functions are still in development and a customized surface registration has not yet been implemented.</p> 
+            <i>Stroke Lesion Correction (SLC)</i>
+            <p>To mitigate improper deformations during spatial registration in brains with stroke lesions, the CAT12 toolbox offers a Stroke Lesion Correction (SLC) method. This feature suppresses strong (high-frequency) deformations during the Shooting registration step, which can occur due to the presence of lesions. To utilize this method, the lesions must be set to zero. This can be achieved by employing the <a class="function" href="matlab:spm_jobman('interactive','','spm.tools.cat.maskimg');">Manual image (lesion) masking</a>, where a lesion mask can be created. Subsequently, the SLC flag should be enabled in the <a class="function" href="matlab:cat('expert');">expert mode</a>  of CAT12. This ensures that the regions containing lesions are excluded from the spatial registration, preventing large deformations that might otherwise arise when aligning the lesioned brain with a template brain.<br>
+            By implementing this correction, CAT12 facilitates more accurate spatial alignment, particularly for clinical data involving stroke patients. This approach is essential for neuroimaging studies where precise brain structure alignment is crucial for subsequent analysis.</p> 
             <p><img id="figure4" width=80% alt="cat_SLC" src="images/cat_SLC_msk_c0009s0010t01A.png"</p>
             <figcaption><b>Stroke Lesion Correction</b> Shown is the grey matter segmentation of subject <i>SLC_msk_c0009s0010t01</i> from the <a href="http://fcon_1000.projects.nitrc.org/indi/retro/atlas.html">ATLAS</a> database without (left) and with <i>Stroke Lesion Correction</i> (SLC; right)</figcaption>
             </p>
